# 86Box_fork_of_caco

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.fb7d113
src/: 86box.c  CMakeLists.txt  config.c  io.c  irda.c  pcmcia.c  usb.c  usb_uhci.c  usb_uhci_new.c
src/android/: AndroidManifest.xml
src/chipset/: ali1543.c  intel_piix.c  sis_5571.c  sis_5571_h2p.c  sis_5572_usb.c  sis_5581_h2p.c  stpc.c  via_pipc.c
src/codegen/: CMakeLists.txt  codegen_x86-64.c  codegen_x86.c
src/codegen_new/: CMakeLists.txt
src/cpu/: 808x.c  CMakeLists.txt
src/device/: CMakeLists.txt  dev_wacom_usb_penp.c  ir_esi9680.c  irda_obex.c  keyboard_at.c  keyboard_xt.c  mouse.c  mouse_ps2.c  mouse_usb.c  mouse_wacom_tablet.c  serial.c
src/disk/: CMakeLists.txt  hdc.c  hdc_ide.c
src/mac/: CMakeLists.txt
src/machine/: m_at_386dx_486.c  m_at_socket8.c  m_ps2_isa.c  machine_table.c
src/network/: CMakeLists.txt  net_eepro100.c  net_eeprom_nmc93cxx.c  net_slirp.c  network.c
src/pcmcia/: CMakeLists.txt  pcmcia_socket_pd6710.c
src/qt/: CMakeLists.txt  android_mouse.cpp  android_mouse.hpp  cocoa_mouse.hpp  evdev_mouse.cpp  evdev_mouse.hpp  macos_event_filter.mm  qt.c  qt_hardwarerenderer.cpp  qt_hardwarerenderer.hpp  qt_main.cpp  qt_mainwindow.cpp  qt_mainwindow.hpp  qt_mainwindow.ui  qt_mediamenu.cpp  qt_platform.cpp  qt_renderercomon.cpp  qt_renderercomon.hpp  qt_rendererstack.cpp  qt_rendererstack.hpp  qt_settings.cpp  qt_settings.ui  qt_settings_bus_tracking.cpp  qt_settingsfloppycdrom.cpp  qt_settingsotherperipherals.cpp  qt_ui.cpp  (+4 more)
src/qt/manager/: CMakeLists.txt  qt_manager_mainwindow.cpp  qt_manager_mainwindow.h  qt_manager_mainwindow.ui  qt_manager_settings.cpp  qt_manager_settings.h  qt_manager_settings.ui  qt_manager_vmadddialog.cpp  qt_manager_vmadddialog.h  qt_manager_vmadddialog.ui
src/unix/: CMakeLists.txt  macos_event_filter.mm  unix.cpp  unix_file.c  unix_keyboard_x11.cpp  unix_sdl.c  unix_timer.c
(+79 files in other folders)
